--- a/cannon/utils/CMakeLists.txt
+++ b/cannon/utils/CMakeLists.txt
@@ -4,3 +4,4 @@ list(APPEND UTILS_SOURCES
   )
 
 add_library(utils OBJECT ${UTILS_SOURCES})
+target_compile_options(utils PUBLIC -Wextra -Werror -Wno-error=deprecated-copy)
