--- a/cannon/ml/CMakeLists.txt
+++ b/cannon/ml/CMakeLists.txt
@@ -2,6 +2,7 @@ list(APPEND ML_SOURCES
   rls.cpp
   piecewise_lstd.cpp
   piecewise_recursive_lstd.cpp
+  piecewise_ilstd.cpp
   adam.cpp
   bfgs.cpp
   wolfe_conditions.cpp
